2.0-rc3

* Add build status endpoint to APIs
* Use XCPretty to tidy XCode build output, if installed

* Fix issue where ordering issues by type only ordered by priority
* Correctly parse Xcode 5 test logs
* Fix issue where xcode build directories are not correctly cleared if using CocoaPods
* Fix issue with maven version parsing if a version range was used

2.0-rc2

* Move the "begin" issue page to a button so it's optional
* Change ordering of page titles to view real content on browser tabs
* Add CocoaPods info to XCode projects - fixes issue:44
* Add a permission denied page rather than always rendering a login screen
* Hide projects in the menu and project list screen that the user does not have permission to view
* Add a configuration for the frequency of changeset loading
* Add support for Xcode 5 test handling

* Fix issue:64 where progressing an issue can appear to alter the time remaining incorrectly
* Fix issue:62 - don't reset the platform in an xcode project unless the info file is being parsed
* Fix issue:agile-app-issues:1 autocomplete issue titles when creating relationships
* Fix some velocity calculations
* Fix issue where restricted users could not edit their own details
* Fix issue:65 Build change list showing complete history when revision before is recent
* Fix an issue that would cause builds started through the interface to delay in starting
* Fix an issue where searches with a duplicate term could fail to render
* Fix issue:67 where text markup could link words ending in :

2.0-rc1

* Group "other" user dashboard issues by project
* Added issues, milestones and userdashboard endpoints to the available APIs
* Add Gradle project support
* Add QR codes for easier access to app install links
* issue:agile-app-builds:1 Build projects once their import is complete

* Fix issue where time logged when resolving an issue was not being saved
* Fix issue where eclipse android projects could not reference local libraries